<resources>
    <string name="app_name">KVT Service</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_login">Log in</string>
    <string name="error_invalid_email">This email is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="action_remember_password">Remember password</string>
    <string name="logout">Log out</string>
    <string name="request_new_password">Request new password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="no_connection">Internet connection required</string>
    <string name="service_engineer">Service engineer:</string>
    <string name="orders">Orders</string>
    <string name="order_number">Order</string>

    <string name="uploaded">Uploaded</string>
    <string name="complete">Complete</string>
    <string name="in_progress">In progress</string>
    <string name="not_started">Not started</string>

    <string name="date">Date</string>
    <string name="installation">Installation</string>
    <string name="task">Task</string>
    <string name="address">Address</string>
    <string name="status">Status</string>
    <string name="pdf">PDF</string>
    <string name="order_data">Order data</string>
    <string name="order_date">Date</string>
    <string name="relation">Relation</string>
    <string name="reference">Reference</string>
    <string name="town">Town</string>
    <string name="contact_person">Contact person</string>
    <string name="telephone">Telephone</string>
    <string name="place_2">Place 2</string>
    <string name="employee">Employee</string>
    <string name="running_hours">Running hours</string>
    <string name="instructions">Instructions</string>
    <string name="accept">Accept</string>
    <string name="accepted">Accepted</string>
    <string name="start">Start</string>

    <string name="pdf_report">PDF Report</string>
    <string name="pdf_report_preview">PDF Report preview</string>
    <string name="send_pdf">Send in e-mail</string>
    <string name="accept_instructions">Please, accept instructions to start.</string>
    <string name="job_description">Job description</string>
    <string name="open_quotation">Open Quotation</string>
    <string name="instructions_followed">Instructions followed</string>
    <string name="lmra_executed">LMRA executed</string>
    <string name="register_dangerous_situation">Register dangerous situation</string>
    <string name="next">Next</string>
    <string name="search_hint">Order number</string>

    <!-- String related to LMRA -->
    <string name="button_delete">Delete this LMRA</string>
    <string name="lmra_button_add">Add Item</string>
    <string name="lmra_text_sample">Text Sample</string>
    <string name="lmra_hint_title">Name</string>
    <string name="lmra_hint_description">Description of the dangerous situation</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="lmra_save">Save</string>
    <!--<string name="error_lmra_name">LMRA name is required</string>-->

    <!--Titles -->
    <string name="lmra_title">LMRA</string>
    <string name="new_lmra_template">New Dangerous Situation</string>
    <string name="edit_lmra_template">Edit Dangerous Situation</string>
    <string name="generating_pdf_document">PDF document:</string>
    <string name="generating_pdf_preview_document">PDF document (preview):</string>
    <string name="open_file_for_preview">Open file for preview.</string>
    <string name="component_defects">Component defects</string>
    <string name="measurements">Measurements</string>
    <string name="job_rules">Job rules</string>
    <string name="save">Save</string>

    <string name="text_service_engineer">Service engineer</string>
    <string name="text_client">Client</string>
    <string name="text_name">Name:</string>
    <string name="signatures">Signatures</string>
    <string name="confirm">Confirm</string>
    <string name="saved">Saved</string>
    <string name="done">Done</string>
    <string name="fuel_added">Fuel added</string>
    <string name="water_separators_drained">Water separators drained</string>
    <string name="leave_installation">Leave installation stand-by/operational</string>
    <string name="customer_material">Used customer material</string>
    <string name="material_from_bus">Used material from bus</string>
    <string name="repair_advice">Repair / Replacement advice</string>

    <!-- Defects -->
    <string name="problem_part">Part</string>
    <string name="problem_element">Element</string>
    <string name="problem_name">Problem</string>
    <string name="problem_scope">Scope</string>
    <string name="problem_intensity">Intensity</string>
    <string name="problem_action">Action</string>
    <string name="problem_resolved">Resolved</string>
    <string name="problem_condition">Condition</string>
    <string name="title_component_list">Components</string>
    <string name="title_component_detail">Component Detail</string>

    <!-- Defects -->
    <string name="defects_next">Next</string>
    <string name="score_text">Score</string>

    <!-- Default template string arrays -->
    <!-- <string name="omvang">Omvang</string> -->

    <string name="size">Size</string>

    <!--
    <string-array.xml name="Omvang">
        <item>Incidenteel</item>
        <item>Plaatselijk</item>
        <item>Regelmatig</item>
        <item>Aanzienlijk</item>
        <item>Algemeen</item>
    </string-array.xml>
    -->

    <string-array name="Size">
        <item>Incidental</item>
        <item>Local</item>
        <item>Regular</item>
        <item>Sizable</item>
        <item>Generic</item>
    </string-array>

    <!-- <string name="intensiteit">Intensiteit</string> -->
    <string name="intensity">Intensity</string>

    <!--
    <string-array.xml name="Intensiteit">
        <item>Laag</item>
        <item>Midden</item>
        <item>Hoog</item>
    </string-array.xml>
    -->

    <string-array name="Intensity">
        <item>Low</item>
        <item>Middle</item>
        <item>High</item>
    </string-array>

    <!-- <string name="oplegost">Opgelost?</string> -->
    <string name="solved">Solved?</string>

    <!-- <string name="acties">Acties</string> -->
    <string name="action">Action</string>

    <!--
    <string-array.xml name="Acties">
        <item>Gecontroleerd</item>
        <item>Vervangen</item>
        <item>Ververst</item>
        <item>Gerevideerd</item>
        <item>Gereinigd</item>
        <item>Gedemonteerd</item>
        <item>Vernieuwd</item>
        <item>Afgesteld</item>
        <item>-</item>
    </string-array.xml>
    -->

    <string-array name="Action">
        <item>Checked</item>
        <item>Replaced</item>
        <item>Refreshed</item>
        <item>Reconditioned</item>
        <item>Cleansed</item>
        <item>Disassembled</item>
        <item>Renewed</item>
        <item>Adjusted</item>
        <item>-</item>
    </string-array>

    <string name="clear">Clear signature</string>

    <string-array name="MeasurementsHeader">
        <item>Motor: Compression test</item>
        <item>Motor: Oil</item>
        <item>Motor: Coolant</item>
        <item>Installation: Environment</item>
        <item>Installation: Test run charge</item>
        <item>Installation: Test run without load</item>
        <item>Exhaust: Exhaust gases</item>
        <item>Running hours</item>
    </string-array>

    <string-array name="MeasurementsItemName">
        <item>Pressure</item>
        <item>Pressure</item>
        <item>Temperature</item>
        <item>Type</item>
        <item>Manufacture</item>
        <item>Temperature</item>
        <item>Acidity</item>
        <item>Frost protection</item>
        <item>Temperature</item>
        <item>Generator voltage</item>
        <item>Ampere Phase 1</item>
        <item>Ampere Phase 2</item>
        <item>Ampere Phase 3</item>
        <item>Power during test</item>
        <item>Frequency charge</item>
        <item>Frequency charge</item>
        <item>Temperature</item>
        <item>Pressure</item>
        <item>Running hours</item>
    </string-array>

    <string-array name="MeasurementsItemUnit">
        <item>bar</item>
        <item>bar</item>
        <item>\u00B0C</item>
        <item> </item>
        <item> </item>
        <item>\u00B0C</item>
        <item>pH</item>
        <item>\u00B0C</item>
        <item>\u00B0C</item>
        <item>Volt</item>
        <item>Ampere</item>
        <item>Ampere</item>
        <item>Ampere</item>
        <item>kW</item>
        <item>Hz</item>
        <item>Hz</item>
        <item>\u00B0C</item>
        <item>Mbar</item>
        <item>Hours</item>
    </string-array>


    <!-- EMail fields -->
    <string name="forget_password_subject">Password Retrieval Email</string>
    <string name="forget_password_body">Your password is: $password</string>
    <string name="success_email_toast">The message was sent</string>
    <string name="error_email_toast">Error while message sent</string>
    <string name="this_order_is_complete">This order is complete.</string>
    <string name="process_order_page_hint">Please, follow instructions and execute LMRA</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!--EMail dialog-->
    <string name="email_dialog_title">Send email to:</string>
    <string name="preparations">Preparations</string>

    <string name="finish_report">Finish service report</string>
    <string name="sign_report">Sign report</string>
    <string name="show_report">Show report</string>
    <string name="remaining_work">Remaining work</string>
    <string name="make_lmra_photo">Make LMRA photo</string>
    <string name="component">Component</string>
    <string name="number">Number</string>
    <string name="mark">Mark</string>
    <string name="sort">Sort</string>
    <string name="serial_number">Serial number</string>
    <string name="internal_remarks">Internal remarks:</string>
    <string name="external_remarks">External remarks:</string>
    <string name="take">Take</string>
    <string name="delete">Delete</string>
    <string name="application_log">Application log</string>
    <string name="language">Language</string>
    <string name="select_language">Choose language (App restart required)</string>
</resources>
