<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:text="@string/problem_scope"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/colorDefaultTextField" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6">

        </Spinner>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:text="@string/problem_intensity"
            android:textAppearance="?android:textAppearanceMedium"

            android:textColor="@color/colorDefaultTextField" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6">

        </Spinner>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:textAppearance="?android:textAppearanceMedium"
            android:text="@string/problem_action"
            android:textColor="@color/colorDefaultTextField" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/colorDefaultTextField">

        </Spinner>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/problem_resolved"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/colorDefaultTextField"
            android:layout_weight="0.4" />

        <Switch
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6" />

    </LinearLayout>
</LinearLayout>