<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.OrderWorkScreenActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:dividerPadding="@dimen/activity_orders_space">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/orders_processing_vertical_margin"
            android:paddingLeft="@dimen/orders_table_vertical_margin"
            android:paddingRight="@dimen/orders_table_vertical_margin"
            android:paddingTop="@dimen/orders_processing_vertical_margin">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:layout_weight="0.5">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/instructions_followed"
                    android:textColor="@color/colorMainText" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_weight="0.5"
                android:gravity="center_vertical">

                <CheckBox
                    android:id="@+id/order_processing_first_stage_instructions_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:gravity="center_vertical" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="2"
                android:layout_weight="1"></TableRow>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/orders_processing_vertical_margin"
            android:paddingLeft="@dimen/orders_table_vertical_margin"
            android:paddingRight="@dimen/orders_table_vertical_margin"
            android:paddingTop="@dimen/orders_processing_vertical_margin">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:layout_weight="0.5">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/lmra_executed"
                    android:textColor="@color/colorMainText" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_weight="0.5"
                android:gravity="center_vertical">

                <CheckBox
                    android:id="@+id/order_processing_first_stage_lmra_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="2"
                android:layout_weight="1"
                android:gravity="center_vertical">

                <Button
                    android:id="@+id/order_processing_first_stage_lmra_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/register_dangerous_situation" />
            </TableRow>

        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/next_padding">

            <TextView
                android:id="@+id/process_order_page_hint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center|right"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/process_order_page_hint" />

            <Button
                android:id="@+id/order_processing_first_stage_next_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/next" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>

